Fix artifacts when doing Split Alpha after Gaussian Blur filter

After applying gaussian we should not write color values into
the destination device if alpha channel is null. There had already
been such check, but it checked for null in 'double' space, not
in the space of the destination device (which is usually 'quint8')

BUG:420013